# atlasvibe

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  BLOCK_SYSTEM_ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SUMMARY.md  If the map is  In `self_test_flow  LICENSE  Let's check the `self_test_flow` in `mass_find_replace.py` where the default map is created for the standard self-test  Let's ensure the symlink creation in `_create_self_test_environment` is robust.  Let's re-examine the transaction generation for symlinks in `scan_directory_for_occurrences` in `file_system_operations.py  Let's re-verify the `_execute_rename_transaction` logic for the `os.path.lexists(new_abs_path)` check.  MANIFEST.in  NOTES.md  README.md  README_PACKAGE.md  REGENERATION_TEST_SUMMARY.md  The `_execute_rename_transaction` has this initial check  The `_verify_self_test_results_task` includes  The `replace_callback` in `replace_logic.py` is  The call in `main_cli` for the standard self-test was  The code for `_get_case_preserved_replacement` is  The current implementation in `replace_logic.py` within the `_get_internal_case_preserved_replacement` function already adheres to this  The diagnostic output  The diagnostic prints reveal the problem  The logic for checking pre-existing paths was simplified to  The self-test output indicates that the diagnostic prints within `_get_case_preserved_replacement` are now active and showing the internal logic flow. For example  The simplified pre-existence check in `_execute_rename_transaction` from commit `abdc200` was  UI_FEATURES_IMPLEMENTATION_SUMMARY.md  ]  avblock.py  build-and-test.sh  build_hooks.py  conftest.py  electron-builder.yaml  file_system_operations.py  fix-python-for-electron.sh  (+37 more)
.github/: actionlint.yaml
.github/ISSUE_TEMPLATE/: studio-issue-template.md
.github/workflows/: actionlint.yml  cd.yaml  ci.yml  test_pr.yml
PYTHON/utils/: graph.py
PYTHON/utils/mecademic_state/: mecademic_helpers.py  (+2 more)
atlasvibe/: cli.py  hello.py  pyproject.toml  server.py
atlasvibe/atlasvibe.egg-info/: PKG-INFO  SOURCES.txt
atlasvibe_cli/: __init__.py  cli.py  pyproject.toml
atlasvibe_engine/: __init__.py
atlasvibe_engine/utils/: __init__.py  blocks_path.py  cache_utils.py  logger.py
blocks/: LICENCE  conftest.py
blocks/AI_ML/: summary.md
blocks/COMPUTER_VISION/: summary.md
blocks/CONTROL_FLOW/: summary.md
blocks/DATA/: summary.md
blocks/DEBUGGING/: summary.md
blocks/DSP/: summary.md
blocks/ETL/: summary.md
blocks/MATH/: summary.md
blocks/NUMPY/: summary.md
blocks/SCIPY/: summary.md
captain/: main.py
captain/internal/: manager.py  wsmanager.py
captain/models/: test_sequencer.py  topology.py
captain/routes/: blocks.py  cloud.py  key.py  log.py  test_blocks.py  test_profile.py  ws.py
captain/tests/: conftest.py  manifest_gen_test.py
captain/types/: flowchart.py  key.py  test_sequence.py  worker.py
captain/utils/: block_metadata_generator.py  block_utils.py  blocks_path.py  constants.py  docstring_utils.py  flowchart_utils.py  import_blocks.py  logger.py  project_blocks_loader.py  project_structure.py  time_utils.py
cli/: constants.py
cli/cmd/: add.py  sync.py
cli/utils/: block_docs.py  generate_docstring_json.py  overview_docs.py
docs/: ACTIONLINT.md  playwright-test-requirements.md  task-2.5-tdd-implementation.md
examples/test-sequencer-conditional-example/: Conditional_Demo.tjoy
examples/test-sequencer-expected-exported-example/: Export_&_Expected_Demo.tjoy  test.py
examples/test-sequencer-robot-framework-example/: Robot_Sequence.tjoy  TestExample.robot
log/: index.txt
logs/: index.txt
npx playwright test playwright-test/: 04_block_operations.spec.ts
pkgs/atlasvibe/: MANIFEST  README.md  environment.yml  pyproject.toml
pkgs/atlasvibe_sdk/: __init__.py  atlasvibe_instruction.py  connection_manager.py  data_container.py  job_result_utils.py  node_decorator.py  node_venv.py  parameter_types.py
playwright-test/: 01_app.spec.ts  04_block_operations.spec.ts  09_apps_gallery.spec.ts  12_custom_block_import.spec.ts  16_edit_custom_block_code.spec.ts  17_custom_block_references.spec.ts  18_custom_block_visual_indicators.spec.ts  19_block_regeneration_visual_feedback.spec.ts  20_block_regeneration_indicators.spec.ts  21_blueprint_management.spec.ts  22_project_save_status.spec.ts  selectors.ts  utils.ts
playwright-test/fixtures/: app.json
scripts/: notarize.js
src/: env.ts  index.html  window.d.ts
src/api/: index.ts
src/main/: consts.ts  executor.ts  index.ts  ipc-main-handlers.ts  logging.ts  utils.ts  window.ts
src/preload/: index.ts
src/renderer/: App.tsx  ErrorPage.tsx  socket-receiver.tsx
tests/: test_append_block_metadata_generation.py  test_atlasvibe_workflow_integration.py  test_automatic_generation_demo.py  test_automatic_metadata_generation.py  test_block_metadata_generation.py  test_block_update_api.py  test_block_update_simple.py  test_build_manifest_import_fix.py  test_code_quality_fixes.py  test_complete_metadata_flow.py  test_complete_workflow_integration.py  test_constants.py  test_custom_block_auto_generation.py  test_custom_block_code_update.py  test_custom_block_references.py  test_custom_block_runtime_generation.py  test_docstring_utils.py  test_docstring_utils_improvements.py  test_expected_auto_generation_behavior.py  test_ipc_handlers.py  test_mass_find_replace.py  test_metadata_generation.py  test_websocket_regeneration.py
tests/captain/: test_blocks_api.py  test_blocks_api_no_mocks.py  test_update_block_code.py  test_update_block_code_integration.py  test_update_block_code_unit.py
tests/mass_find_replace/: conftest.py  test_mass_find_replace.py
tests/python/: conftest.py  conftest_test_mass_replace.py  constants.py  mocks.py  test_block_operations.py  test_mass_find_replace.py  test_project_management.py
tests/temp/: exclude_this_flojoy_file.txt  file_with_atlasVibe_lines.txt  only_name_atlasvibe.md  self_test_transactions.json  self_test_transactions.json.bak  unmapped_variant_atlasvibe_content.txt
(+514 files in other folders)
