# Copyright (c) 2024 Emasoft (for atlasvibe modifications and derivative work)
# Copyright (c) 2024 Flojoy (for the original "Flojoy Studio" software)
#
# This software is licensed under the MIT License.
# Refer to the LICENSE file for more details.

[project]
name = "atlasvibe"
version = "0.1.0"
description = "General-purpose visual programming IDE for Python with an Agent node flow approach."
authors = [
    {name = "Emasoft", email = "your-email@example.com"}, # Please update with your actual email
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.11.9"
dependencies = [
    "uvicorn[standard]>=0.23.2,<0.24.0",
    "fastapi>=0.104.1,<0.105.0",
    "pyyaml>=6.0.1,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "debugpy>=1.8.0,<2.0.0",
    "watchfiles>=0.21.0,<0.22.0",
    "numpy>=1.23.0,<2.0.0", 
    "pandas>=1.4.0,<3.0.0", 
    "python-box>=7.0.0,<8.0.0", 
    "plotly>=5.0.0,<6.0.0", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "ruff>=0.3.0,<0.4.0",
    "typer[all]>=0.9.0,<0.10.0",
    "python-frontmatter>=1.0.1,<2.0.0",
    "httpx>=0.26.0,<0.27.0",
    "pytest-json-report>=1.5.0,<2.0.0",
    "Pillow>=9.0.0,<11.0.0",      
    "scikit-image>=0.19.0,<0.24.0", 
    "boto3>=1.20.0,<2.0.0",      
    "scipy>=1.7.0,<2.0.0",
    "prefect>=2.0.0,<3.0.0", # Added prefect
    "chardet>=3.0.0,<6.0.0"  # Added chardet
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rsxX -l --tb=short --strict-markers"
testpaths = [
    "tests",
    "PYTHON/tests",
    "blocks",
    "atlasvibe_engine/tests",
    "cli",
    "playwright-test/fixtures/custom-sequences",
]
python_files = "test_*.py *_test_.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = ["."]

[tool.uv.workspace]
members = ["atlasvibe_engine"] # Correctly point to your source package directory
