[metadata]
name = atlasvibe
version = attr: atlasvibe.__version__
author = Emasoft
author_email = info@emasoft.com
description = Visual Programming IDE for Python with AI agent capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Emasoft/atlasvibe
project_urls =
    Bug Tracker = https://github.com/Emasoft/atlasvibe/issues
    Documentation = https://github.com/Emasoft/atlasvibe/wiki
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
python_requires = >=3.11,<3.13
zip_safe = False
include_package_data = True

[options.entry_points]
console_scripts =
    atlasvibe = atlasvibe.cli:main
    atlasvibe-server = atlasvibe.server:main